[package]
name = "sgl-scheduler"
version = "0.1.0"
edition = "2021"

[lib]
name = "sgl_scheduler"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
zmq = "0.10"
crossbeam-channel = "0.5"

# Phase 2+ dependencies (uncomment when Rust does serialization directly)
# rmp-serde = "1.1"
# serde = { version = "1.0", features = ["derive"] }
# rmpv = { version = "1.0", features = ["with-serde"] }
